# poc-grpc

./: .gitignore  README.md
grpc-proxy/: Dockerfile  envoy.yaml  start.sh
grpc-server/: Cargo.toml  build.rs
grpc-server/src/: config.rs  error.rs  grpc.rs  lib.rs  main.rs
portal/: _pb.js  app.js  build.sh  client.js  index.html  kobiton_grpc_web_pb.js  kobiton_pb.js  package-lock.json  package.json
proto/: kobiton.proto
