[package]
name = "hubble2"
version = "0.1.0"
authors = ["Nga Pham <ngapham@kobiton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
chrono = "0.4.11"
futures = "0.3.5"
futures-core = "0.3.5"
futures-util = "0.3.5"
http = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
prost = "0.6"
#serde = { version = "1.0.111", features = ["derive"] }
#serde_json = "1.0"
thiserror = "1.0.19"
tokio = { version = "0.2.21", features = ["rt-threaded", "macros", "io-util", "sync", "time", "fs"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tonic = { version = "0.2.1", features = ["codegen"] }

[build-dependencies]
tonic-build = "0.2.0"